--- a/client/src/components/Landing/Topics/Topic.css
+++ b/client/src/components/Landing/Topics/Topic.css
@@ -1,7 +1,8 @@
 .topic__container {
   display: flex;
   background-color: var(--subtle-background);
-  height: 60vh;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -31,6 +32,7 @@
 
 .topic__list--item {
   background-color: var(--main-color);
+  margin-top: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   color: var(--background);
