--- a/client/src/components/Posts/PostCreate/PostNew.css
+++ b/client/src/components/Posts/PostCreate/PostNew.css
@@ -1,4 +1,7 @@
 .new-post__container {
+  margin-top: 3rem;
+  margin-left: 5vw;
+  margin-right: 5vw;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
